Bugfix removed extended wrapped elements to full browser width
Extended wrapped elements was a hack to expand the header outside
the width of the body container. This required a number of css
rules including large margins and paddings and making overflow
hidden. All came undone as mobile wants to display the extended
margins.

Should have just done was add a container div for content. More
wrappers but simpler code.

--- a/app/assets/stylesheets/components.banner.scss
+++ b/app/assets/stylesheets/components.banner.scss
@@ -1,15 +1,8 @@
 //
 // component.banner
-//  - stretching across the width of the browser screen
-//  - https://www.sitepoint.com/css-extend-full-width-bars/
+//  - horizontal strip across the website
 //
 @import 'settings.colors';
-
-.banner {
-  margin: 0 -3000px;
-  overflow: auto;      // otherwise child element margins can set an empty band along the top of the browser
-  padding: 0 3000px;
-}
 
 .banner--dark {
   background: $scheme-dark-background;
